--- a/templates/my.cnf.j2
+++ b/templates/my.cnf.j2
@@ -1,3 +1,3 @@
 [client]
-user={{ arm_mysql_master_user }}
-password={{ arm_mysql_master_pass }}
+user={{ rds_mysql_master_user }}
+password={{ rds_mysql_master_pass }}
